# rura

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml  rust.yml
src/: app.rs  args.rs  cmd_runner.rs  completable_input.rs  completion.rs  config.rs  content_widget.rs  debouncer.rs  file_saver.rs  help_widget.rs  history.rs  main.rs  output_widget.rs  presets.rs  presets_widget.rs  props.rs  rura.rs  rura_widget.rs  save_to_file_widget.rs  search_widget.rs  theme.rs  uicmd.rs
src/shell/: builder.rs  cached_runner.rs  cmd_runner.rs  exec.rs  mod.rs  output.rs  simple_runner.rs  split_runner.rs
src/snapshots/: rura__app__tests__command_input.snap  rura__app__tests__live_mode_confirm.snap  rura__app__tests__live_mode_full_confirm.snap  rura__app__tests__main_screen.snap  rura__app__tests__main_screen_help.snap  rura__app__tests__main_screen_help_large_screen.snap  rura__app__tests__main_screen_help_narrow_screen.snap  rura__app__tests__main_screen_help_small_screen.snap  rura__app__tests__save_command_popup.snap  rura__app__tests__save_output_popup.snap  rura__content_widget__tests__errors_pane_bottom.snap  rura__content_widget__tests__highlight 1.snap  rura__content_widget__tests__highlight 4.snap  rura__content_widget__tests__highlight another highlight.snap  rura__content_widget__tests__highlight horizontal base.snap  rura__content_widget__tests__highlight prev 4x.snap  rura__content_widget__tests__highlight.snap  rura__content_widget__tests__no scrolling.snap  rura__output_widget__tests__after errors.snap  (+28 more)
