[package]
name = "rura"
version = "0.0.0"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tui-input = "0.15.3"
#tui-popup = "0.7.2"
log = "0.4.29"
crossterm = { version = "0.29.0" }

[dev-dependencies]
insta = "1.46.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
