[package]
name = "rura"
version = "1.0.0"
license = "MIT"
edition = "2024"
description = "Interactive TUI pipeline editor built for rapid iteration"
repository = "https://github.com/tlipinski/rura"
homepage = "https://github.com/tlipinski/rura"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tui-input = "0.15.3"
tui-popup = "0.7.4"
log = "0.4.29"
crossterm = { version = "0.29.0" }
unicode-width = "0.2.2"
itertools = "0.14.0"
regex = "1.12.3"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }

[dev-dependencies]
insta = "1.46.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
